--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Magazine</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-
-<%= yield %>
-
-</body>
+  	<head>
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	    <title><%= content_for?(:title) ? yield(:title) : "Magazine" %></title>
+	    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Magazine" %>">
+	    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+	    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	    <%= csrf_meta_tags %>
+  	</head>
+  	<body>
+	    <header>
+	      	<%= render 'layouts/navigation' %>
+	    </header>
+	    <main role="main" style="background: white;">
+	       <%= render 'layouts/messages' %>
+	       <%= yield %>
+	    </main>
+  	</body>
 </html>
