--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -10,7 +10,8 @@
 		<% end %>
 	</div>
 
-	<%= f.hidden_field :user_id, value: current_user.id %>
+	<%= f.hidden_field :commentor_id, 	value: current_user.id %>
+	<%= f.hidden_field :commentor_name, value: current_user.name %>
 	<br />
 	<div class="actions">
 		<%= f.submit "Comment", :class => "btn btn-primary pull-right" %>
